# LiteThinking---Python---Django

./: .env.example  .gitignore  GUIA_SUSTENTACION.md  README.md  docker-compose.yml  setup.ps1  setup.sh  sonar-project.properties
backend/django_core/: Dockerfile  manage.py  pyproject.toml
backend/django_core/apps/companies/: admin.py  models.py  repositories.py  serializers.py  urls.py  views.py
backend/django_core/apps/companies/migrations/: 0001_initial.py  0002_add_nit_telefono_check_constraints.py
backend/django_core/apps/inventory/: admin.py  models.py  serializers.py  urls.py  views.py
backend/django_core/apps/inventory/management/commands/: seed_inventario.py
backend/django_core/apps/inventory/migrations/: 0001_initial.py  0002_initial.py
backend/django_core/apps/products/: admin.py  models.py  serializers.py  urls.py  views.py
backend/django_core/apps/products/management/commands/: reindex_embeddings.py
backend/django_core/apps/products/migrations/: 0001_initial.py  0002_empresa_nit_on_update_cascade.py
backend/django_core/apps/users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/django_core/apps/users/management/commands/: seed_users.py
backend/django_core/apps/users/migrations/: 0001_initial.py
backend/django_core/config/: urls.py
backend/django_core/config/settings/: base.py  development.py  production.py  testing.py
backend/django_core/tests/: test_auth.py  test_empresas.py
backend/django_core/utils/: blockchain.py
backend/services/ai_agent/: Dockerfile  main.py  pyproject.toml
backend/services/ai_agent/routers/: agent.py
backend/services/ai_agent/services/: blockchain_service.py  embedding_service.py  langchain_agent.py
backend/services/inventory_service/: Dockerfile  main.py  pyproject.toml
backend/services/inventory_service/routers/: inventory.py
backend/services/inventory_service/services/: email_service.py  pdf_service.py
database/migrations/: V1__initial_schema.sql  V3__extra_tables.sql
database/seeds/: V2__seed_data.sql
domain/: pyproject.toml
domain/src/litethinking_domain/: __init__.py
domain/src/litethinking_domain/entities/: __init__.py  empresa.py  inventario.py  producto.py  usuario.py
domain/src/litethinking_domain/exceptions/: __init__.py  domain_exceptions.py
domain/src/litethinking_domain/repositories/: __init__.py  empresa_repository.py  inventario_repository.py  producto_repository.py  usuario_repository.py
domain/src/litethinking_domain/value_objects/: __init__.py  email_address.py  money.py  nit.py  password_hash.py
domain/tests/entities/: test_empresa.py  test_inventario.py  test_producto.py
domain/tests/value_objects/: test_email_address.py  test_money.py  test_nit.py  test_password_hash.py
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/components/atoms/: Badge.tsx  Label.tsx  Spinner.tsx  Toaster.tsx  index.ts
frontend/src/components/molecules/: index.ts
frontend/src/components/organisms/: index.ts
frontend/src/lib/: api.ts  auth.ts  toast.tsx
frontend/src/types/: index.ts
(+29 files in other folders)
