[tool.poetry]
name = "litethinking-domain"
version = "0.1.0"
description = "LiteThinking domain layer - pure business entities, value objects and repository interfaces"
authors = ["LiteThinking Dev <dev@litethinking.com>"]
readme = "README.md"
packages = [{ include = "litethinking_domain", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-cov = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/litethinking_domain --cov-report=term-missing"

[tool.coverage.run]
source = ["src/litethinking_domain"]
