[tool.poetry]
name = "litethinking-backend"
version = "0.1.0"
description = "LiteThinking backend - Django REST API"
authors = ["LiteThinking Dev <dev@litethinking.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
django = "^5.0"
djangorestframework = "^3.15"
djangorestframework-simplejwt = "^5.3"
django-cors-headers = "^4.3"
psycopg2-binary = "^2.9"
python-decouple = "^3.8"
argon2-cffi = "^23.1"
passlib = { extras = ["bcrypt"], version = "^1.7" }
httpx = "^0.27"
Pillow = "^10.3"
# Consume the domain layer as a local path dependency
litethinking-domain = { path = "../../domain", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-django = "^4.8"
pytest-cov = "^5.0"
factory-boy = "^3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.testing"
testpaths = ["tests"]
