[tool.poetry]
name = "litethinking-ai-agent"
version = "0.1.0"
description = "AI agent microservice - semantic search, LangChain, pgvector, Blockchain"
authors = ["LiteThinking Dev <dev@litethinking.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
fastapi = "^0.111"
uvicorn = { extras = ["standard"], version = "^0.29" }
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
pgvector = "^0.3"
python-decouple = "^3.8"
# AI
anthropic = "^0.28"
langchain = "^0.2"
langchain-anthropic = "^0.1"
langchain-community = "^0.2"
sentence-transformers = ">=3.0"
# Blockchain
web3 = "^6.19"
litethinking-domain = { path = "../../../domain", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
