[tool.poetry]
name = "litethinking-inventory-service"
version = "0.1.0"
description = "Inventory microservice - PDF generation and email delivery"
authors = ["LiteThinking Dev <dev@litethinking.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
fastapi = "^0.111"
uvicorn = { extras = ["standard"], version = "^0.29" }
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
alembic = "^1.13"
python-decouple = "^3.8"
reportlab = "^4.2"
sendgrid = "^6.11"
httpx = "^0.27"
litethinking-domain = { path = "../../../domain", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
